<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/exercise"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AssignExercise">


    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="559dp"
        android:ems="10"
        android:hint="Enter Date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectanexercise" />

    <Spinner
        android:id="@+id/exercisedropdown"
        style="@style/spinner_style"
        android:layout_width="184dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="79dp"
        android:background="#FFFFFF"
        android:outlineAmbientShadowColor="#931010"
        android:outlineSpotShadowColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/editText1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/selectanexercise"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/selectanexercise"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="82dp"
        android:text="Please select an exercise"
        app:layout_constraintBottom_toTopOf="@+id/editText1"
        app:layout_constraintEnd_toStartOf="@+id/exercisedropdown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/athlete"
        android:layout_width="213dp"
        android:layout_height="0dp"
        android:layout_marginBottom="49dp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NoteBox" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="299dp"
        android:text="Assign Exercise"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/athlete"
        app:layout_constraintTop_toBottomOf="@+id/athlete" />

    <EditText
        android:id="@+id/NoteBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="51dp"
        android:ems="10"
        android:hint="Note to Athlete"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/athlete"
        app:layout_constraintStart_toStartOf="@+id/editText1"
        app:layout_constraintTop_toBottomOf="@+id/editText1" />

</androidx.constraintlayout.widget.ConstraintLayout>
